--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <html>
 
 <head>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-245894226-1"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+
+  	gtag('config', 'UA-245894226-1');
+	</script>
 	<title>Côme Sériès' profile</title>
 	<meta name="description" content="This is the profile of Côme">
 	<meta charset="utf-8">
